--- a/static/css/index.css
+++ b/static/css/index.css
@@ -150,35 +150,75 @@ body {
 }
 
 
-/* "Spotlight Badge */
-.spotbox {
-  width: 800x; height: auto;
-  position: relative;
-  border: 1px solid #FFF;
-  background: #FFF;
-  margin: 20px;
-  display: inline-block;
+@media screen {
+  /* "Spotlight Badge */
+  .spotbox {
+    width: 800x; height: auto;
+    position: relative;
+    border: 1px solid #FFF;
+    background: #FFF;
+    margin: 20px;
+    display: inline-block;
+  }
+
+  .spotlight:after {
+    content: "ICLR Spotlight";
+    z-index: 1;
+    overflow: hidden;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    /* border: 1px solid #000; */
+    color: #FFF;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 30px;
+    transform: rotate(45deg);
+    width: 200px;
+    display: block; 
+    background: #DAA520;
+    background: linear-gradient(#FFD700 0%, #DAA520 100%);
+    box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+    position: absolute;
+    top: 35px; right: -45px;
+    clip-path: polygon(200px 30px, 170px -0px, 30px -0px, 0px 30px, 10px 30px,  110px 30px)
+  }
 }
 
-.spotlight:after {
-  content: "ICLR Spotlight";
-  z-index: 1;
-  overflow: hidden;
-  font-size: 18px;
-  font-weight: bold;
-  font-family: 'Open Sans', sans-serif;
-  /* border: 1px solid #000; */
-  color: #FFF;
-  text-transform: uppercase;
-  text-align: center;
-  line-height: 30px;
-  transform: rotate(45deg);
-  width: 200px;
-  display: block; 
-  background: #DAA520;
-  background: linear-gradient(#FFD700 0%, #DAA520 100%);
-  box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
-  position: absolute;
-  top: 35px; right: -45px;
-  clip-path: polygon(200px 30px, 170px -0px, 30px -0px, 0px 30px, 10px 30px,  110px 30px)
+@media (max-width: 600px) {
+  /* "Spotlight Badge */
+  .spotbox {
+    width: 800x; height: auto;
+    position: relative;
+    border: 1px solid #FFF;
+    background: #FFF;
+    margin: 20px;
+    display: inline-block;
+  }
+
+  .spotlight:after {
+    content: "ICLR Spotlight";
+    z-index: 1;
+    overflow: hidden;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    color: #FFF;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 30px;
+    transform: rotate(0deg);
+    display: block; 
+    background: #DAA520;
+    background: linear-gradient(#FFD700 0%, #DAA520 100%);
+    box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+    position: absolute;
+    top: -5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .title.is-1 {
+    font-size: 2.5rem;
+  }
 }
